# TS3CommandMessage

./: CMakeLists.txt  README.md  cmake.yml
.github/workflows/: cmake.yml
src/: package.ini  plugin.cpp  plugin.hpp
